--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link
       rel="icon"
       type="image/png"
@@ -15,22 +14,26 @@
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body class="home-page">
-    <nav class="nav">
+    <a class="skip-to-content" href="#home">Skip to content</a>
+    <header class="nav">
       <img src="./assets/shared/logo.svg" alt="logo" class="logo" />
       <button
         class="navToggle-btn"
         id="navToggle-btn"
         aria-controls="navlist"
         aria-expanded="false"
-      ></button>
-      <div class="navbar">
-        <ul class="navlist">
+      >
+        <span class="sr-only" aria-expanded="false">Menu</span>
+      </button>
+      <nav class="navbar">
+        <ul class="navlist" data-visible="false">
           <a href="index.html">
             <li
               class="uppercase ff-sans-cond letter-spacing-3"
               aria-selected="true"
             >
-              <span class="text-white sr-only" aria-hidden="true">00</span> home
+              <span class="text-white" aria-hidden="true">00</span>
+              home
             </li>
           </a>
           <a href="destination.html">
@@ -38,7 +41,7 @@
               class="uppercase ff-sans-cond letter-spacing-3"
               aria-selected="false"
             >
-              <span class="text-white sr-only" aria-hidden="true">01</span>
+              <span class="text-white" aria-hidden="true">01</span>
               destination
             </li>
           </a>
@@ -47,7 +50,8 @@
               class="uppercase ff-sans-cond letter-spacing-3"
               aria-selected="false"
             >
-              <span class="text-white sr-only" aria-hidden="true">02</span> Crew
+              <span class="text-white" aria-hidden="true">02</span>
+              Crew
             </li>
           </a>
           <a href="technology.html">
@@ -55,14 +59,14 @@
               class="uppercase ff-sans-cond letter-spacing-3"
               aria-selected="false"
             >
-              <span class="text-white sr-only" aria-hidden="true">03</span>
+              <span class="text-white" aria-hidden="true">03</span>
               Technology
             </li>
           </a>
         </ul>
-      </div>
-    </nav>
-    <main class="home">
+      </nav>
+    </header>
+    <main class="home" id="home">
       <section class="welcome-para">
         <h1
           class="heading text-accent fs-500 uppercase ff-sans-cond letter-spacing-1"
